[tool.poetry]
name = "Multi_Agents"
version = "0.1.0"
description = "Lin Ziyang wrote the travel chatbot"
authors = ["Lin Ziyang <yang189256@163.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
langchain = "==0.3.23"
langchain_core = "==0.3.51"
langchain_openai = "==0.3.12"
langchain-community = "==0.3.21"
langchain-text-splitters = "==0.3.8"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
